T-38: Fix ingredient tiles editing and spacing

--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -7,7 +7,7 @@
     width: fit-content;
   }
 
-  .ingredient-amount {
+  .ingredient-amount, .ingredient-unit {
     margin-left: 0.25rem;
   }
 }
